margin vs gap issues

--- a/src/index.css
+++ b/src/index.css
@@ -202,18 +202,24 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 24px;
+  /* gap: 24px; */
 }
 
 .features-container2 {
   display: flex;
-  gap: 24px;
+  margin-bottom: 24px;
+  /* gap: 24px; */
 }
 
 .pricing_Customer {
+  margin-left: 24px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  /* gap: 24px; */
+}
+
+.Customer-support {
+  margin-top: 24px;
 }
 
 .Integrations:hover {
@@ -287,7 +293,7 @@ body {
 
 .social-reviews {
   display: flex;
-  gap: 24px;
+  /* gap: 24px; */
   /* flex-wrap: nowrap; */
   /* overflow: hidden; */
 
@@ -299,13 +305,14 @@ body {
   background-color: #FFFF;
   padding: 24px;
   border-radius: 20px;
+  margin: 0px 16px;
 }
 
 .review-card p {
   font-family: 'Poppins Regular';
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 32px;
 }
 
@@ -321,7 +328,7 @@ body {
   line-height: 24px;
   border-radius: 20px;
   padding: 10px 24px;
-  gap: 8px;
+  /* gap: 8px; */
 }
 
 /* CTA */
@@ -373,7 +380,7 @@ body {
 
 .cta-main button {
   padding: 14px 24px;
-  gap: 10px;
+  /* gap: 10px; */
   border: none;
   border-radius: 16px;
   font-family: 'Poppins Bold';
@@ -433,13 +440,15 @@ body {
 
 .footer-link {
   display: flex;
-  gap: 120px
+  /* margin: 0px 120px; */
+  /* gap: 120px */
 }
 
 .footer-links {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin: 0px 120px;
 }
 
 .footer-links h4 {
@@ -543,6 +552,27 @@ body {
     font-size: 50px;
   }
 
+  .features-container2 {
+    display: flex;
+    margin-bottom: 0px;
+    /* gap: 24px; */
+  }
+
+  .pricing_Customer {
+    margin-left: 0px;
+    display: flex;
+    flex-direction: column;
+    /* gap: 24px; */
+  }
+
+  .container {
+    margin-bottom: 24px;
+  }
+
+  .Customer-support {
+    margin-top: 0px;
+  }
+
   .features-container {
     flex-direction: column;
   }
@@ -588,7 +618,7 @@ body {
 
   .social-reviews {
     display: flex;
-    gap: 24px;
+    /* gap: 24px; */
     /* flex-wrap: wrap; */
     /* overflow-x: scroll; */
   }
@@ -661,6 +691,14 @@ body {
   .footer-first-grid p {
     font-size: 16px;
     line-height: 16px;
+  }
+
+  .footer-links {
+    margin: 0px 0px;
+  }
+
+  .row2 {
+    margin-left: 120px;
   }
 }
 
@@ -738,7 +776,7 @@ body {
 
   .social-reviews {
     display: flex;
-    gap: 24px;
+    /* gap: 24px; */
     /* flex-wrap: wrap; */
     /* overflow-x: scroll; */
   }
